# hackathon-cir-17-app

./: .vercelignore  README.md  app.py  config.toml  pyproject.toml  requirements.txt  vercel.json
verbatim_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
