[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verbatim-analyzer"
version = "0.1.0"
description = "Alternative open-source à Cobbai pour l'analyse automatisée des verbatims clients"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit==1.41.1",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "bertopic==0.16.4",
    "sentence-transformers==3.3.1",
    "hdbscan==0.8.40",
    "umap-learn==0.5.7",
    "transformers>=4.47.1",
    "torch>=2.9.0",
    "scikit-learn>=1.6.0",
    "wordcloud>=1.9.4",
    "matplotlib>=3.9.3",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.0",
]

[tool.setuptools]
py-modules = ["app"]
